--- a/algorithms/algorithms.vcxproj.filters
+++ b/algorithms/algorithms.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="DP.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="codingTest.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
